fixed text alignment issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -191,19 +191,26 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  transform-origin: 60px 60px;
+  transform-origin: 42px 55px;
   transform: rotateZ(180deg);
-  width: 9em;
+  width: 8.5em;
   text-align: center;
 }
 
 .bottom-square {
   height: 12em;
   width: 9em;
+  margin: 0;
 }
 
 .square-text-bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-origin: 60px 60px;
   transform: rotateZ(0deg);
+  width: 9em;
+  text-align: center;
 }
 
 .left-square {
@@ -229,10 +236,9 @@ a {
 .square-text-right {
   display: flex;
   justify-content: center;
-  align-items: center;
-  transform-origin: 60px 60px;
+  transform-origin: 43px 41px;
   transform: rotateZ(270deg);
-  width: 9em;
+  width: 8.5em;
   text-align: center;
 }
 
@@ -240,11 +246,12 @@ a {
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 50%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, 100%);
   -ms-transform: translate(-50%, 100%);
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .click-view-v2 {
@@ -252,10 +259,25 @@ a {
   opacity: 0;
   position: absolute;
   top: 100%;
-  left: 89%;
+  left: 50%;
   transform: translate(-50%, 100%);
   -ms-transform: translate(-50%, 100%);
   text-align: center;
+}
+
+.click-view-v3 {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  transform: translate(-50%, 100%);
+  -ms-transform: translate(-50%, 100%);
+  text-align: center;
+}
+
+.link-text {
+  margin-bottom: -10px;
 }
 
 .tile:hover .link-text {
@@ -270,11 +292,17 @@ a {
   opacity: 2;
 }
 
+.tile:hover .click-view-v3 {
+  opacity: 2;
+}
+
+
 .hidden {
   background-color: #BFDBAE;
   color: black;
   font-size: 1em;
   padding: 8px 16px;
+  margin-bottom: 0px;
 }
 
 /* CHANCE CARDS */
